modules/gdscript/tests/scripts/analyzer/errors/setter_with_wrong_value_arg.gd
var a: int: set = set_named

func test():
	pass

func set_named(name: StringName, value: Array) -> void:
	prints("set_named", name, value)
